refactor: UnmodifiableList 반환 시 원본 참조 끊기