@@ -1,7 +1,6 @@
 package ladder.domain;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 public class Ladder {
@@ -21,6 +20,6 @@ public class Ladder {
     }
 
     public List<Line> toUnModifiableLines() {
-        return Collections.unmodifiableList(lines);
+        return List.copyOf(lines);
     }
 }
